<resources>
    <string name="app_name">Livreur Taw</string>
    <string name="slogan">Nharek zin, Hay raby m3ak bro</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="restaurant">Restaurant</string>
    <string name="discount">Remise</string>
    <string name="orders">ch3ana khedma</string>
    <string name="action_search">charchi b noumrou</string>
    <string name="title_activity_shipping">Map</string>
    <string name="filter">Filter</string>
    <string name="pharmacie">Pharmacie</string>
</resources>