<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/restaurant"
            android:title="@string/restaurant"/>
        <item
            android:id="@+id/nav_pharmacie"
            android:icon="@drawable/pharmacy"
            android:title="@string/pharmacie"/>
        <!--<item
            android:id="@+id/nav_patisseries"
            android:icon="@drawable/pattisserie"
            android:title="Patisseries"/> -->
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/tasks"
            android:title="@string/orders"/>
        <item
            android:id="@+id/nav_taches"
            android:icon="@drawable/mine"
            android:title="Taches mte3i"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>